fix nav option mobile menu

--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -7,3 +7,8 @@
         margin: 5px;
     }
  }
+ @media (max-width:500px) {
+    .home-img {
+        margin-top:125px;
+    }
+ }
