--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -187,7 +187,7 @@ img.mobile-nav-logo {
 
 .nav-down {
     position: absolute;
-    top: 10%;
+    top: 30px;
     left: 70%;
     transition:.6s;
     z-index:-5;
@@ -204,7 +204,7 @@ input#nav-toggle {
     cursor: pointer;
     width: 50px;
     height: 50px;
-    top: 10%;
+    top: 30px;
     left: 70%;
     /* top: 50%; */
     margin-left: -25px;
